CICD/Jenkins/01-example-jenkins/namespaces/ns1/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ing
  namespace: dev
spec:
  rules:
  - host: 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: docker-hello-world-svc
            port: 
              number: 80
